--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
       say.value = '';
     });
 
-    var host = "";  // ホスト名を設定する
+    var host = "";
     var clientId = Math.random().toString(36).substring(7);
-    var client = new Paho.Client(host, 443, "/mqtt", clientId);  // 接続するポート番号を設定する
-                                                                 // WebSocketのパスを設定する
+    var client = new Paho.Client(host, 443, "/mqtt", clientId);
     var connectOptions = {
-      useSSL: true,  // SSLを無効にする場合はfalseを設定する
+      useSSL: true,
       timeout: 3,
       mqttVersion: 4,
       onSuccess: subscribe,
       onFailure: fail,
       keepAliveInterval: 30,
-      reconnect: true  // socketが切れた場合に自動で再接続するオプションを有効にする
+      reconnect: true
     };
     client.connect(connectOptions);
     client.onMessageArrived = onMessage;
